# CourseHub

./: main.py  pyproject.toml
api/: courses.py  sections.py  user.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
