[tool.poetry]
name = "Course Hub"
version = "0.1.0"
description = ""
authors = ["Azran Hossain <azranhossain@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
